--- a/journbook/accounts/templates/profile.html
+++ b/journbook/accounts/templates/profile.html
@@ -1,21 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ user.username }}</title>
-</head>
-<body>
-    {% if user.is_authenticated %}
-        <form action="" method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Save</button>
-        </form>
-    {% else %}
-        first u need to sign in
-    {% endif %}
-</body>
-</html>
+{% extends 'main/base.html' %}
+
+{% block title %} {{ user.username }} {% endblock %}
+
+{% block content %}
+    {% for i in user %}
+        First name:
+        {{ i.first_name }}
+        <br>
+        Last name:
+        {{ i.last_name }}
+        <br>
+        Biography:
+        {{ i.biography }}
+        <br>
+        Username:
+        {{ i.username }}
+        <br>
+        Email:
+        {{ i.email }}
+        <br>
+    {% endfor %}
+{% endblock %}
