--- a/journbook/main/templates/main/index.html
+++ b/journbook/main/templates/main/index.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam officiis tempora vel. Adipisci, at consequuntur deleniti, dolor excepturi fuga fugit harum hic laudantium magnam, quaerat tenetur? At beatae dolorem quaerat?
-    {% include 'main/test.html' with message='hello world' %}
+    {% include 'main/test.html' with posts=posts %}
 {% endblock %}
