--- a/journbook/post/templates/create_post.html
+++ b/journbook/post/templates/create_post.html
@@ -4,11 +4,10 @@
 
 {% block content %}
 
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="text" name="text">
-        <input type="file" name="pictures" accept="image/*">
-{#        {{ form.as_p }}#}
+        <input type="file" name="picture" accept="image/*">
         <button type="submit">Post</button>
     </form>
 
