--- a/journbook/main/templates/main/test.html
+++ b/journbook/main/templates/main/test.html
@@ -6,6 +6,15 @@
         {{ post.text }}<br>
         <img src="{{ post.picture.url }}" alt="Not found" style="width: 200px;"><br>
         {{ post.pub_date }}<br>
+        Comments
+        <br>
+            {% for comment in post.comments %}
+                {{ comment.user.username }}<br>
+                {{ comment.comment_text }}<br>
+            {% endfor %}
+
+        <br>
+        ------------------------------------------------------------------------------------
         <form action="{% url 'like-post' %}" method="post">
         {% csrf_token %}
             <input type="hidden" name="post_id" value="{{ post.id }}">
@@ -16,6 +25,13 @@
             {% endif %}
         </form>
         <strong>{{ post.liked.all.count }}</strong>
+
+        <form action="{% url 'leave-comment' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="post_id" value="{{ post.id }}">
+            <input type="text" name="comment_text">
+            <button type="submit">Leave comment</button>
+        </form>
         <br>
     {% endfor %}
 </div>
