--- a/journbook/main/templates/main/test.html
+++ b/journbook/main/templates/main/test.html
@@ -15,6 +15,12 @@
 
         <br>
         ------------------------------------------------------------------------------------
+        <form action="{% url 'comments' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="post_id" value="{{ post.id }}">
+            <button type="submit">Show all comments</button>
+        </form>
+
         <form action="{% url 'like-post' %}" method="post">
         {% csrf_token %}
             <input type="hidden" name="post_id" value="{{ post.id }}">
@@ -26,12 +32,7 @@
         </form>
         <strong>{{ post.liked.all.count }}</strong>
 
-        <form action="{% url 'leave-comment' %}" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="post_id" value="{{ post.id }}">
-            <input type="text" name="comment_text">
-            <button type="submit">Leave comment</button>
-        </form>
+
         <br>
     {% endfor %}
 </div>
