--- a/journbook/main/templates/main/test.html
+++ b/journbook/main/templates/main/test.html
@@ -2,7 +2,7 @@
 
 <div>
     {% for post in posts %}
-        <a href="{% url 'profile' id=user.id %}">{{ post.author.username }}</a><br>
+        <a href="{% url 'profile' id=post.author.id %}">{{ post.author.username }}</a><br>
         {{ post.text }}<br>
         <img src="{{ post.picture.url }}" alt="Not found" style="width: 200px;"><br>
         {{ post.pub_date }}<br>
