Add some style to some pages

--- a/journbook/accounts/templates/profile.html
+++ b/journbook/accounts/templates/profile.html
@@ -3,31 +3,26 @@
 {% block title %} {{ profile.username }} {% endblock %}
 
 {% block content %}
-    First name:
-    {{ profile.first_name }}
-    <br>
-    Last name:
-    {{ profile.last_name }}
-    <br>
-    Biography:
-    {{ profile.biography }}
-    <br>
-    Username:
-    {{ profile.username }}
-    <br>
-    Email:
-    {{ profile.email }}
-    <br>
-    {% if profile != user %}
-        <form action="{% url 'follow' id=profile.id %}" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="following_id" value="{{ profile.id }}">
-            {% if fol.value == 'Follow' %}
-                <button type="submit">Follow</button>
-            {% else %}
-                <button type="submit" style="background: red;">Unfollow</button>
-            {% endif %}
-        </form>
-    {% endif %}
-
+    <div class="profile_view">
+        <div class="profile_view_content">
+            First name: {{ profile.first_name }}<br>
+            Last name: {{ profile.last_name }}<br>
+            Biography: {{ profile.biography }}<br>
+            Username: {{ profile.username }}<br>
+            Email: {{ profile.email }}<br>
+            <div class="profile_view_form">
+                {% if profile != user %}
+                    <form action="{% url 'follow' id=profile.id %}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="following_id" value="{{ profile.id }}">
+                        {% if fol.value == 'Follow' %}
+                            <button type="submit" class="profile_button">Follow</button>
+                        {% else %}
+                            <button type="submit" class="profile_button">Unfollow</button>
+                        {% endif %}
+                    </form>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
