--- a/journbook/accounts/templates/login.html
+++ b/journbook/accounts/templates/login.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../static/accounts/css/style.css">
 
 </head>
 <body>
@@ -16,14 +17,19 @@
         </div>
     {% endfor %}
 
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form.username }}<br>
-        {{ form.username.errors }}<br>
-        {{ form.password }}<br>
-        {{ form.password.errors }}<br>
-        <button type="submit">Login</button>
-        <a href="../password_reset">Forgot password?</a>
+    <form action="" method="post" class="login_form">
+        <div class="login_form_content">
+            {% csrf_token %}
+            <input type="text" name="username" placeholder="username"><br>
+{#        {{ form.username }}<br>#}
+            {{ form.username.errors }}
+{#        {{ form.password }}<br>#}
+            <input type="password" name="password" placeholder="password"><br>
+            {{ form.password.errors }}
+            <button type="submit">Login</button>
+            <a href="../password_reset">Forgot password?</a>
+            <a href="{% url 'signup' %}">Don't have an account?</a>
+        </div>
     </form>
 </body>
 </html>
