--- a/journbook/accounts/templates/profile_edit.html
+++ b/journbook/accounts/templates/profile_edit.html
@@ -4,20 +4,23 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <form action="" method="post">
-            {% csrf_token %}
-            First name
-            {{ form.first_name }}<br>
-            Last name
-            {{ form.last_name }}<br>
-            Biography
-            {{ form.biography }}<br>
-            Username
-            {{ form.username }}<br>
-            Email
-            {{ form.email }}<br>
-            <a href="{% url 'password_change' %}"> Change password</a>
-            <button type="submit">Save</button>
+        <form action="" method="post" class="login_form">
+            <div class="login_form_content">
+                {% csrf_token %}
+                First name <br>
+                <input type="text" name="first_name"><br>
+                Last name <br>
+                <input type="text" name="last_name"><br>
+                Biography <br>
+                <textarea name="biography" id="" cols="30" rows="10"></textarea><br>
+                Username <br>
+                <input type="text" name="username" value="{{ user.username }}"><br>
+                Email <br>
+                <input type="email" name="email" value="{{ user.email }}"><br>
+                <br>
+                <a href="{% url 'password_change' %}"> Change password</a><br>
+                <button type="submit">Save</button>
+            </div>
         </form>
     {% else %}
         first u need to sign in
