--- a/journbook/main/templates/main/base.html
+++ b/journbook/main/templates/main/base.html
@@ -1,4 +1,7 @@
+{% load static %}
+
 <!doctype html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +9,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/main/css/style.css">
+    <link rel="stylesheet" href="../../../static/main/css/style.css">
+    <link rel="stylesheet" href="../../../static/accounts/css/style.css">
+    <link rel="stylesheet" href="../../../static/post/css/style.css">
+    <script src="https://kit.fontawesome.com/6751b5c20b.js" crossorigin="anonymous"></script>
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
